# rtfm

./: .gitignore  LICENSE  LOCAL.md  README.md  pyproject.toml  rtfm.py
src/rtdm/: __init__.py  config.py  config_cli.py  main.py  portal_cli.py  rotate_cli.py  usage_cli.py  whoami_cli.py
src/rtdm/backends/: __init__.py  local.py  remote.py
tests/: test_config.py  test_config_cli.py  test_dispatch.py  test_portal_cli.py  test_remote_backend.py  test_rotate_cli.py  test_strip_control_chars.py  test_usage_cli.py  test_whoami_cli.py
