[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtdm"
version = "0.2.1"
description = "An AI shell helper that gives you the command without the commentary."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cli", "ollama", "shell", "ai", "terminal"]
authors = [{ name = "rtdm contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
rtdm = "rtdm.main:main"

[project.urls]
Homepage = "https://rtdm.sh"
Repository = "https://github.com/t3t5u0403/rtdm-cli"
Issues = "https://github.com/t3t5u0403/rtdm-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rtdm"]
